    - Resolved #77724: bug in primary_key_info with regard to column
      names containing whitespace (ISHIGAKI)
    - Resolved #79364: variance example of the doc (ISHIGAKI)
    - Resolved #78833: utf8 flag for column names (JAMADAM)
    - Resolved #64177: ping() wipes out the errstr (ISHIGAKI)
    - Resolved #79576: (patch) bind_param don't work with PADTMP
      scalars (VOVKASM)

1.37 Thu 12 Jun 2012
    - Updated to SQLite 3.7.12.1 (ISHIGAKI)

1.36_04 Sat 19 May 2012
    - Final developer release
    - Updated to SQLite 3.7.12 (ISHIGAKI)
    - Tweaked Makefile.PL to behave better during the Bsymbolic
      check (HMBRAND)
    - Added SQLITE_WITHOUT_ZONEMALLOC for older MacOS X (ISHIGAKI)

1.36_03 Mon 7 May 2012
    - Updated to SQLite 3.7.11 (ISHIGAKI)
    - Fix >32bit integer truncation and other sqlite_set_result
      condition issue (Yuriy Kaminskiy)
    - Fix integer overflow in passing argument to perl function
      (Yuriy Kaminskiy)
    - Convert unsigned -> int64 when possible (Yuriy Kaminskiy)
    - Turned datatype mismatch error (introduced in 1.34_02) into
      a warning (you can disable this warning by setting PrintWarn
      attribute to false). (ISHIGAKI)
    - Refactored sqlite_is_number to fix various corner cases
      (ISHIGAKI)

1.36_02 Thu 23 Feb 2012
    - Downgraded SQLite to 3.7.9, as 3.7.10 turned out to be
      broken on the latest MacOS X (due to a missing symbol),
      and broke other modules that typically use temporary tables
      under a few environments too. As of this writing, would-be
      3.7.11 seems fine, but it would take another month to be
      released. (ISHIGAKI)

1.36_01 Thu 19 Jan 2012
    *** CHANGES THAT MAY POSSIBLY BREAK YOUR OLD APPLICATIONS ***
    - Updated to SQLite 3.7.10 (ISHIGAKI)
      Note that this release changed the default schema format
      number, that means newly created database files will be
      unreadable by SQLite version prior to 3.3.0 (2006-01-10)