@@ -21,6 +21,8 @@ Changes for Perl extension DBD-SQLite
     - Resolved #64177: ping() wipes out the errstr (ISHIGAKI)
     - Resolved #79576: (patch) bind_param don't work with PADTMP
       scalars (VOVKASM)
+    - Refactored primary_key_info to support attached databases
+      (ISHIGAKI)
 
 1.37 Thu 12 Jun 2012
     - Updated to SQLite 3.7.12.1 (ISHIGAKI)
